# myagent

./: README.md  pyproject.toml
.claude/: settings.local.json
configs/: agent_config.example.yaml  agent_config.myagent.yaml  verification_env.example.yaml  verification_env.myagent.yaml
docs/: test-experience-20260714-202737.md
docs/superpowers/plans/: 2026-07-06-embedded-langgraph-agent.md  2026-07-13-verification-tools.md  2026-07-18-physical-hardware-setup-implementation.md
docs/superpowers/specs/: 2026-07-06-embedded-langgraph-agent-design.md  2026-07-18-physical-hardware-setup-design.md
runs/20260706-181308/context/: context.md
runs/20260706-181308/plan/: plan.json  plan.md
runs/20260706-181308/slices/: integrate-smoke-check.md
runs/20260707-085048/context/: context.md
runs/20260707-085048/slices/: goal-implementation.md
runs/20260707-085952/context/: context.md
runs/20260707-085952/plan/: plan.json
runs/20260707-085952/slices/: goal-implementation.md
runs/20260707-133504/context/: context.md
src/embedded_agent/: __init__.py  agent_tools.py  artifacts.py  cli.py  codebase_tools.py  config.py  graph.py  hardware.py  human.py  llm.py  nodes.py  safe_shell.py  state.py  verification_tools.py
tests/: test_agent_tools.py  test_build_context.py  test_cli.py  test_codebase_tools.py  test_graph.py  test_hardware.py  test_human.py  test_llm_config.py  test_plan_validation.py  test_safe_shell.py  test_state_models.py  test_verification_tools.py
tests/__pycache__/: test_build_context.cpython-313-pytest-9.0.3.pyc.17756
(+125 files in other folders)
